--- a/02-carousel.html
+++ b/02-carousel.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
    <title>Carousel Component</title>
 
    <style>
@@ -61,7 +62,6 @@
          position: absolute;
          border-radius: 50%;
          stroke:#087f5b;
-         align-items: center;
          display: flex;
          align-items: center;
          justify-content: center;
